--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "new-project",
+    "name": "FirstExpoProject",
     "slug": "new-project",
     "version": "1.0.0",
     "orientation": "portrait",
